--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">ProjektPQ</string>
     <string name="default_web_client_id">601172156898-ke43rsopeafg6lin88eip9th1o8j3pgh.apps.googleusercontent.com</string>
@@ -29,4 +30,31 @@
     <string name="toggle_password_visibility">Toggle password visibility</string>
 
     <string name="login_berhasil">Login Berhasil</string>
+
+    <!-- Tambah Soal Activity -->
+    <string name="tombol_kembali">Tombol Kembali</string>
+    <string name="bobot_nilai">Bobot Nilai</string>
+    <string name="masukkan_bobot_nilai">Masukkan Bobot Nilai (1-100)</string>
+    <string name="default_bobot">10</string>
+    <string name="soal">Soal</string>
+    <string name="masukkan_soal">Masukkan Soal</string>
+    <string name="simpan">Simpan</string>
+
+    <!-- Detail Siswa Activity -->
+    <string name="detail_siswa">Detail Siswa</string>
+    <string name="foto_profil">Foto Profil</string>
+    <string name="nama_siswa">Nama Siswa</string>
+    <string name="nomor_induk">Nomor Induk</string>
+    <string name="tempat_tanggal_lahir">Tempat, Tanggal Lahir</string>
+    <string name="jilid_label">Jilid</string>
+    <string name="loading">Loading...</string>
+    <string name="placeholder">...</string>
+
+    <!-- Akun Activity -->
+    <string name="akun_title">Akun</string>
+    <string name="nama_label">Nama</string>
+    <string name="email_label">Email</string>
+    <string name="telepon_label">Telepon</string>
+    <string name="edit_button">Edit</string>
+    <string name="edit_nama">Edit Nama</string>
 </resources>
